# sprintopia

./: .gitignore  README.md  app.py  index.py  main.py  pyproject.toml  requirements.txt
api/: index.py
db_scripts/: 1761757392_create_grooming_sessions.sql  1761757392_init.sql
src/core/: container.py
src/core/infrastructure/database/: database_client.py
src/core/infrastructure/repositories/: estimation_turn_repository.py  grooming_session_repository.py  user_repository.py
src/core/infrastructure/supabase/: supabase_facade.py
src/core/models/: base_entity.py  entity_status.py  estimation_turn.py  grooming_session.py  user.py  user_estimation_turn.py
src/core/services/: grooming_session_service.py  user_service.py
src/core/utils/: env.py
src/service_host/: app.py  config.py  main.py
src/service_host/middleware/: auth_middleware.py
src/service_host/routes/: grooming_sessions.py  health.py  users.py
